--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TinDog</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <title>fluxHoney</title>
+    <link rel="shortcut icon" href="images/honeyFavicon.ico" type="image/x-icon">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
