--- a/index.html
+++ b/index.html
@@ -172,6 +172,25 @@ You will get a 10 % Discount and Free Delivery and we will contact you when the 
 </section>
 
 
+<section id="pricing">
+
+  <div class="card card1 col-lg-4 col-md-6">
+    <div class="card-header">
+     <h3>Honey Pricing</h3>
+    </div>
+    <div class="card-body">
+     <h2>999 Rupees/Litre</h2>
+     <p>Pure Healthy Honey</p>
+     <p>Directly Sourced From Farmers</p>
+     <p>10% discount and Free Delivery if you provide info</p>
+     <a href="#mailchimp"><button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button></a>
+     
+    </div>
+
+
+
+</section>
+
 
 
    
@@ -191,7 +210,7 @@ You will get a 10 % Discount and Free Delivery and we will contact you when the 
 <div id="mc_embed_signup">
 <form action="https://gmail.us9.list-manage.com/subscribe/post?u=cbb23199e2a174f738e4a2157&amp;id=be0bd50b6a&amp;f_id=00fc06e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Give your Details Below for 10% Discount</h2>
+	<h2>Give your Details Below for 10% Discount and Free Delivery</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
